codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__stream_termination_tests__plan_error_math_narrow.snap
---
source: tui/src/app/tests/stream_termination_tests.rs
assertion_line: 108
expression: rendered
---
• Proposed Plan
 
 
  Intro.
  
  $$
  \frac{a+b+c+d+e+
  f}{g+h}
 

■ Server error
